# FlightDataPlotter

./: .bzrignore  AUTHORS  CHANGES  LICENSE  LICENSE-COMMERCIAL  LICENSE-FDS  LICENSE-OLD  MANIFEST.in  README  README.rst  Skeleton.wpu  TODO  bones.py  requirements.txt  setup.cfg  setup.py
doc/: Makefile  make.bat
doc/source/: Overview.rst  conf.py  index.rst  sphinx.rst
flightdataplotter/: __init__.py  plot_params.py
ivory/: tusk.py
jenkins/: build.sh  test.sh
osl/: __init__.py  example.py
scripts/: cross_bones  skull.py
skeleton/: __init__.py  cross_bones_too.py  skull_too.py  stuff.py
skeleton/scripts/: cross_bones  cross_bones.py  skull.py
skeleton/tests/: __init__.py  testSkeleton.py
tests/: __init__.py  testSkeleton.py  test_flight_data_plotter.py
