[metadata]
name = FlightDataPlotter
url = https://github.com/flightdataservices/fplightdataplotter
author = Flight Data Services Ltd
author_email = developers@flightdataservices.com
maintainer = Flight Data Services Ltd
maintainer_email = developers@flightdataservices.com
description = A tool for plotting LFL parameters
long_description = file: README
long_description_content_type = text/x-rst
keywords = flightdataplotter, lfl, flightdataconverter, flightdata, logical frame layout
license = 'Other/Proprietary License'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: Other/Proprietary License,
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    flightdataanalyzer
    flightdataconverter
    flightdatautilities
    future
    h5py
    matplotlib
    numpy
setup_requires =
    setuptools_scm>=3.3.3
tests_require =
    mock
    nose>=1.0

[options.packages.find]
exclude = doc, tests

[options.extras_require]
dev =
    flake8>=3.7.7
    flake8-assertive>=1.0.1
    flake8-bugbear>=19.3.0
    flake8-coding>=1.3.1
    flake8-commas>=2.0.0
    flake8-comprehensions>=2.1.0
    flake8-docstrings>=1.3.0
    flake8-future-import>=0.4.5
    flake8-isort>=2.7.0
    flake8-logging-format>=0.6.0
    flake8-quotes>=1.0.0
    isort>=4.3.17

[flake8]
doctests = true
exclude = build,dist,.git,.tox,__pycache__
hang-closing = false
ignore = B001,B005,E121,E123,E126,E501,E731,FI1,FI9,W504
max-complexity = 20
max-doc-length = 119
max-line-length = 119
select = A5,B0,B3,B9,C,D2,D3,D4,E,F,G,I0,Q0,W
inline-quotes = single
multiline-quotes = single
docstring-quotes = double
no-accept-encodings = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = polariswebsite
line_length = 119
multi_line_output = 5
use_parentheses = true

[pycodestyle]
exclude = build,dist,.git,.tox,__pycache__
hang-closing = false
ignore = E121,E123,E126,E501,E731,W504
max-doc-length = 119
max-line-length = 119

[pydocstyle]
add-ignore = D1

[nosetests]
detailed-errors = true

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html